change dark mode icon + small code fixes

--- a/projects/myriad/css/style.css
+++ b/projects/myriad/css/style.css
@@ -69,7 +69,7 @@ div.footer {
     margin-bottom: 1rem;
 }
 
-div.mode-button {
+div.color-mode {
     position: absolute;
     bottom: 0;
     right: 0;
